--- a/src/app/app.html
+++ b/src/app/app.html
@@ -31,6 +31,8 @@
             <a routerLink="/about" aria-current="page" class="rounded-md px-3 py-2 text-sm font-medium text-white text-gray-300 hover:bg-gray-950/50 text-white">About</a>
             <a routerLink="/dashboard"aria-current="page" class="rounded-md px-3 py-2 text-sm font-medium text-white text-gray-300 hover:bg-gray-950/50 text-white">Dashboard</a>
             <a routerLink="/setting" aria-current="page" class="rounded-md px-3 py-2 text-sm font-medium text-white text-gray-300 hover:bg-gray-950/50 text-white">Setting</a>
+            <a routerLink="/home" aria-current="page" class="rounded-md px-3 py-2 text-sm font-medium text-white text-gray-300 hover:bg-gray-950/50 text-white">Home</a>
+
           </div>
         </div>
       </div>
