--- a/src/app/home/dialog.html
+++ b/src/app/home/dialog.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Favorite Animal</h2>
 <mat-dialog-content>
-  My favorite animal is: {{data.email}}
+  เช็ค่าข้อมูล{{data.email}}
 
 </mat-dialog-content>
 <mat-dialog-actions align="end">
