--- a/src/app/profile/dialog.html
+++ b/src/app/profile/dialog.html
@@ -1,6 +1,6 @@
-<h2 mat-dialog-title>Form home</h2>
+<h2 mat-dialog-title>Form Profile</h2>
 <mat-dialog-content>
-  เช็คค่าข้อมูล : {{data.email}}
+  เช็คค่าข้อมูล : {{data.username}}
 
 </mat-dialog-content>
 <mat-dialog-actions align="end">
