--- a/src/app/profile/dialog.html
+++ b/src/app/profile/dialog.html
@@ -3,6 +3,9 @@
   เช็คค่าข้อมูล : {{data.username}}
 
 </mat-dialog-content>
+
+<button matButton (click)="SendData()">OK</button>
+
 <mat-dialog-actions align="end">
   <button matButton mat-dialog-close>Cancel</button>
 </mat-dialog-actions>
