--- a/src/app/pdashboard/pdashboard.html
+++ b/src/app/pdashboard/pdashboard.html
@@ -4,18 +4,18 @@
       <h1 class="text-xl font-semibold">Performance Monitoring Dashboard</h1>
     </div>
     <div class="col-span-1">
-        <mat-button-toggle-group
-          class="rounded-xsl shadow-sm border border-slate-200 p-1 bg-white"
-          name="favoriteColor"
-          aria-label="Favorite Color"
-          [hideSingleSelectionIndicator]="hideSingleSelectionIndicator()"
-        >
-          <mat-button-toggle value="year">Year</mat-button-toggle>
-          <mat-button-toggle value="quarter">Quarter</mat-button-toggle>
-          <mat-button-toggle value="month">Month</mat-button-toggle>
-          <mat-button-toggle value="week">Week</mat-button-toggle>
-          <mat-button-toggle value="day">Day</mat-button-toggle>
-        </mat-button-toggle-group>
+      <mat-button-toggle-group
+        class="rounded-xsl shadow-sm border border-slate-200 p-1 bg-white"
+        name="favoriteColor"
+        aria-label="Favorite Color"
+        [hideSingleSelectionIndicator]="hideSingleSelectionIndicator()"
+      >
+        <mat-button-toggle value="year">Year</mat-button-toggle>
+        <mat-button-toggle value="quarter">Quarter</mat-button-toggle>
+        <mat-button-toggle value="month">Month</mat-button-toggle>
+        <mat-button-toggle value="week">Week</mat-button-toggle>
+        <mat-button-toggle value="day">Day</mat-button-toggle>
+      </mat-button-toggle-group>
     </div>
   </div>
   <div class="bg-white shadow-sm rounded-xl border border-slate-200 p-4 flex flex-col gap-2">
@@ -23,13 +23,21 @@
     <div class="grid grid-cols-1 gap-2 lg:grid-cols-5 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1">
       <mat-card appearance="outlined">
         <mat-card-header>
-          <mat-card-title> Australian Shepherd <svg class ="absolute top-1 right-15" 
-              xmlns="http://www.w3.org/2000/svg" 
-              height="24px" 
-              viewBox="0 -960 960 960" 
-              width="24px" 
-              fill="#000000">
-              <path d="M620-520q25 0 42.5-17.5T680-580q0-25-17.5-42.5T620-640q-25 0-42.5 17.5T560-580q0 25 17.5 42.5T620-520Zm-280 0q25 0 42.5-17.5T400-580q0-25-17.5-42.5T340-640q-25 0-42.5 17.5T280-580q0 25 17.5 42.5T340-520Zm140 260q68 0 123.5-38.5T684-400h-66q-22 37-58.5 58.5T480-320q-43 0-79.5-21.5T342-400h-66q25 63 80.5 101.5T480-260Zm0 180q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-400Zm0 320q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Z"/></svg></mat-card-title>
+          <mat-card-title class="flex justify-center">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-50 fill-blue-500"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m2.25 15.75 5.159-5.159a2.25 2.25 0 0 1 3.182 0l5.159 5.159m-1.5-1.5 1.409-1.409a2.25 2.25 0 0 1 3.182 0l2.909 2.909m-18 3.75h16.5a1.5 1.5 0 0 0 1.5-1.5V6a1.5 1.5 0 0 0-1.5-1.5H3.75A1.5 1.5 0 0 0 2.25 6v12a1.5 1.5 0 0 0 1.5 1.5Zm10.5-11.25h.008v.008h-.008V8.25Zm.375 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z"
+              />
+            </svg>
+          </mat-card-title>
         </mat-card-header>
         <mat-card-content class="text-xs"> MoM -23% YoY +20% </mat-card-content>
       </mat-card>
@@ -101,9 +109,7 @@
       </div>
     </div>
     <div>
-      <app-chart [data]="datachart">
-
-      </app-chart>
+      <app-chart [data]="datachart"> </app-chart>
     </div>
   </div>
 
