--- a/src/app/pdashboard/pdashboard.scss
+++ b/src/app/pdashboard/pdashboard.scss
@@ -1,8 +1,10 @@
 mat-button-toggle-group {
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
-mat-card-title{
-    text-align: center;
-    justify-content: center;
+/* ลดขนาดปุ่มทั้งหมด */
+mat-button-toggle {
+  font-size: 10px !important;
+  min-height: 12px !important; /* ความสูงรวมของปุ่ม */
 }
+
